Corrigido bug com o overflow que acontecia no chrome.

--- a/css/base.css
+++ b/css/base.css
@@ -10,6 +10,10 @@ body {
 
 @media (max-width: 355px) {
   body {
+    position: relative;
+    overflow-x: hidden;
+  }
+  html {
     overflow-x: hidden;
   }
 }
